# job-search

./: HOUSTON_JOB_SOURCES.md  README.md  debug_scraper.py  debug_selectors.py  gradio_app.py  job_pipeline.py  job_sources.py  job_vector_store.py  main.py  parallel_populate_database.py  populate_database.py  pyproject.toml  rmc.sh  scripts.md  test_my_search.py  test_playwright.py  test_vector_store.py  test_visible.py  test_ziprecruiter.py  ziprecruiter_scraper.py
docs/: ANGELLIST_SCRAPER_IMPLEMENTATION.md  INDEED_SCRAPER_IMPLEMENTATION.md  LINKEDIN_SCRAPER_IMPLEMENTATION.md  SETUP_VECTOR_STORE.md
examples/: multi_site_llm_search.py
old/: demo_all_presets.py  demo_consolidated_scraper.py  populate_database.py  run_app.py
old/docs/: GLASSDOOR_SCRAPER_IMPLEMENTATION.md  LLM_ENGINEER_SCRAPER.md  MULTI_SITE_ARCHITECTURE.md
old/examples/: job_cleanup_demo.py  llm_job_search.py  smart_filtering_demo.py
old/tests/: test_all.py  test_angellist_scraper.py  test_glassdoor_scraper.py  test_my_search.py  test_playwright.py  test_vector_store.py  test_ziprecruiter.py
src/: __init__.py  job.py  queries.py  scraper.py  storage.py  vector_storage.py
src/database/: __init__.py  scheduled_cleanup.py
src/models/: __init__.py  job_models.py
src/scrapers/: __init__.py  angellist_llm_scraper.py  base_scraper.py  filtered_ziprecruiter_scraper.py  glassdoor_llm_scraper.py  indeed_llm_scraper.py  linkedin_llm_scraper.py  llm_engineer_scraper.py  multi_site_llm_scraper.py  remoteok_scraper.py  smart_job_filter.py  (+1 more)
tests/: test_indeed_scraper.py  test_linkedin_scraper.py  test_llm_scraper.py
(+8 files in other folders)
