[project]
name = "job-search"
version = "0.1.0"
description = "Houston Job Search RAG System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "numpy>=1.24.0",
    "gradio>=4.0.0",
    "schedule>=1.2.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
# Main scraper commands
job-search = "src.scraper:main"
scraper-demo = "src.scraper:main"

# Query management
queries-demo = "src.queries:main"
list-queries = "src.queries:main"

# Vector database management
vectordb = "src.vector_storage:main"
vector-stats = "src.vector_storage:main"

